get bookings by id
- obtenemos las reservas de acuerdo al ID del customer